# AnotherRaft

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  results
RCF/: CMakeLists.txt
RCF/include/RCF/: ThreadLibrary.hpp
bench/: CMakeLists.txt  bench_client.cc  bench_server.cc  bench_util.h  bench_util_test.cc  cloud_cluster3.cfg  cloud_cluster5.cfg  cloud_cluster7.cfg  cloud_cluster9.cfg  cluster.cfg  cluster3.cfg  counter.cc  file_bench.cc  raft_server.cc  storage_bench.cc  util.h  ycsb_client.cc
doc/: FlexibleK.md  FlexibleK_v2.md  FlexibleK_v3.md
experiment_results/: craft_20220816_results  craft_5_k2m3_fail1_results_20220816  craft_5_k2m3_fail1_results_20220818  craft_5_k2m3_fail2_results_20220817  craft_5_k3m2_fail0_results_20220818  craft_5_k3m2_fail1_results_20220817  craft_5_k3m2_fail2_results_20220817  craft_7_k2m5_fail0_results_20220823  craft_7_k2m5_fail1_results_20220823  craft_7_k2m5_fail2_results_20220823  craft_7_k2m5_fail3_results_20220823  craft_7_k3m4_fail0_results_20220822  craft_7_k3m4_fail1_results_20220822  craft_7_k3m4_fail2_results_20220822  craft_7_k3m4_fail3_results_20220822  flex_20220815_results  flex_20220816_results  flex_5_fail1_20220816_result  flex_5_fail2_20220816_results  hraft_5_fail1_results_20220906  hraft_7_fail1_results_20220906  hraft_7_fail2_results_20220906  hraft_7_k4m3_fail1_results_20220905  hraft_7_k4m3_fail2_results_20220906  raft_20220815_results  raft_20220816_results
kv/: CMakeLists.txt  channel.cc  channel.h  client.cc  client.h  concurrent_queue.h  concurrent_queue_test.cc  config.h  kv_format.cc  kv_format.h  kv_node.cc  kv_node.h  kv_rsm.cc  kv_rsm.h  kv_rsm_test.cc  kv_server.cc  kv_server.h  kv_server_test.cc  rpc.cc  rpc.h  storage_engine.cc  storage_engine.h  type.cc  type.h
kv/test/: kv_cluster_test.cc  kv_server_test.cc  storage_engine_test.cc
raft/: CMakeLists.txt  encoder.cc  encoder.h  log_entry.cc  log_entry.h  log_manager.cc  log_manager.h  raft.cc  raft.h  raft_appendentries_test.cc  raft_node.cc  raft_node.h  raft_node_test.cc  raft_requestvote_test.cc  raft_struct.h  raft_type.h  rcf_rpc.cc  rcf_rpc.h  rpc.h  serializer.cc  serializer.h  serializer_test.cc  storage.cc  storage.h  storage_leveldb.cc  storage_leveldb.h  storage_test.cc  util.cc  util.h
raft/test/: CMakeLists.txt  encoder_test.cc  raft_appendentries_test.cc  raft_node_test.cc  raft_node_test.h  raft_requestvote_test.cc  retransfer_bench_test.cc  rpc_bench_test.cc  serializer_test.cc  storage_test.cc
scripts/: build_executable.py  clean.py  cloud_build.py  cloud_clean.py  cloud_runbench.py  install_dependencies.py  limit_bandwidth.py  run_bench.py
src/: CMakeLists.txt  encoder.cc  encoder.h  encoder_test.cc  log_entry.cc  log_entry.h  log_manager.cc  log_manager.h  raft.cc  raft.h  raft_appendentries_test.cc  raft_node.cc  raft_node.h  raft_node_crash_test.cc  raft_node_test.cc  raft_node_test.h  raft_node_test_crash.cc  raft_requestvote_test.cc  raft_struct.h  raft_type.h  rcf_rpc.cc  rcf_rpc.h  rcf_rpc_test.cc  rpc.h  serializer.cc  serializer.h  serializer_test.cc  storage.cc  storage.h  storage_test.cc  util.cc  util.h
test/: Adder.cc  AsyncClient.cc  AsyncServer.cc  CMakeLists.txt  SampleClient.cc  SampleServer.cc  raft_server.cc  serializer_test.cc
